# Pi3hat_robotic_systems

./: .gitignore  .gitmodules  README.md  Rev_res.csv  porva.cpp  prova.py  stop.py  test_motor.py
Doc/: Mulinex_bags.md
benchmark_scripts/: bench_perf.bash
interface_node/: CMakeLists.txt  package.xml
interface_node/launch/: function_lib.py  prova_set.py  test_node.launch.py
interface_node/src/: imu_raw_data.cpp  int_node_v1.cpp
moteus_pi3hat/: CMakeLists.txt  package.xml
moteus_pi3hat/include/moteus_pi3hat/: moteus_protocol.h  pi3hat.h  pi3hat_moteus_interface.h  realtime.h
moteus_pi3hat/src/: moteus_control_example.cc  pi3hat.cc  pi3hat_tool.cc
omni_vel_controller/: CMakeLists.txt  omni_vel_controller.xml  package.xml
omni_vel_controller/include/omni_vel_controller/: omni_vel_controller.hpp
omni_vel_controller/src/: omni_vel_controller.cpp
pi3hat_base_controller/: CMakeLists.txt  package.xml  pi3hat_base_controller.xml
pi3hat_base_controller/include/pi3hat_base_controller/: distributor_state_broadcaster.hpp  moteus_debug.hpp  pi3hat_joint_group_controller.hpp  pi3hat_state_broadcaster.hpp
pi3hat_base_controller/src/: distributor_state_broadcaster.cpp  moteus_debug.cpp  pi3hat_joint_group_controller.cpp  pi3hat_state_broadcaster.cpp
pi3hat_hw_interface/: CMakeLists.txt  moteus_pi3hat_interface.xml  package.xml
pi3hat_hw_interface/config/: B8.yaml  bench_controller.yaml  ilc_online.yaml  test_RL.yaml  test_config.yaml  try_2.yaml
pi3hat_hw_interface/include/pi3hat_hw_interface/: actuator_manager.hpp  elem_info_parsers.hpp  moteus_pi3hat_interface.hpp  motor_manager.hpp
pi3hat_hw_interface/launch/: bench_control_bag.launch.py  benchmark_test.launch.py  moteu_pi3hat_interface.launch.py  perform_bechmark.launch.py  set_motor_param_SM.py  set_motor_params.py  start_B8.launch,py  start_MJBots_Pi3Hat_hw_Interface.launch.py  start_MJBots_Pi3Hat_hw_Interface.py  start_omnicar_lidar.launch.py  test PD_trq_ref.py  test_0.launch.py
pi3hat_hw_interface/mul_conf_file/: Joints_Prameter_2023_09_19_19_39_24  Joints_Prameter_2024_02_28_12_41_32  Joints_Prameter_2024_02_28_12_50_33  Joints_Prameter_2024_02_28_15_52_42  Joints_Prameter_2024_03_27_14_43_34  Joints_Prameter_2024_03_27_17_02_38  Joints_Prameter_2024_04_05_12_07_34  Joints_Prameter_2024_04_08_12_13_40  Joints_Prameter_2024_04_08_14_26_31  Joints_Prameter_2024_04_08_17_23_31  Joints_Prameter_2024_04_09_12_11_18
pi3hat_hw_interface/src/: actuator_manager.cpp  bench_record.cpp  moteus_pi3hat_interface.cpp  motor_manager.cpp  pm_transport_node.cpp
pi3hat_hw_interface/test/: motor_manager_test.cpp
pi3hat_hw_interface/urdf/: 8DOF_mul_RLTESTS.urdf.xacro  8DOF_mul_off.urdf.xacro  B8.urdf.xacro  ILC_8DOF_mul_off.urdf.xacro  bench_test.urdf.xacro  mulinex_urdf.urdf.xacro  no_jnt.urdf.xacro  test_ZERO.urdf.xacro  test_int.urdf.xacro
pi3hat_moteus_int_msgs/: CMakeLists.txt  package.xml
pi3hat_moteus_int_msgs/msg/: DistributorsState.msg  JointDebugUtils.msg  JointsCommand.msg  JointsStates.msg  OmniMulinexCommand.msg  PacketPass.msg  PowerDistributor.msg
pi3hat_omni_controller/: CMakeLists.txt  package.xml  pi3hat_omni_controller.xml
pi3hat_omni_controller/config/: old_test_config.yaml  test_config.yaml
pi3hat_omni_controller/include/pi3hat_omni_controller/: pi3hat_vel_controller.hpp
pi3hat_omni_controller/launch/: set_motor_params.py  test_0.launch.py
pi3hat_omni_controller/pi3hat_omni_controller/include/pi3hat_omni_controller/: pi3hat_vel_controller.hpp
pi3hat_omni_controller/pi3hat_omni_controller/src/: pi3hat_vel_controller.cpp
pi3hat_omni_controller/pi3hat_omni_controller/urdf/: test_int.urdf
pi3hat_omni_controller/src/: pi3hat_vel_controller.cpp
rbt_pd_cnt/: CMakeLists.txt  package.xml  rbt_pd_cnt.xml
rbt_pd_cnt/include/rbt_pd_cnt/: real_pd_cnt.hpp  robot_pd_cnt.hpp
rbt_pd_cnt/src/: real_pd_cnt.cpp  robot_pd_cnt.cpp
